--- a/app/views/layouts/hamfactory/application.html.erb
+++ b/app/views/layouts/hamfactory/application.html.erb
@@ -7,8 +7,32 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <nav class="side-panel">
+    <h1>Hamfactory</h1>
 
-<%= yield %>
+    <ul>
+      <li>
+        <%= link_to Hamfactory.root_path do %>
+          <i class="fa fa-dashboard"></i> Dashboard
+        <% end %>
+      </li>
+    </ul>
 
+    <ul>
+      <% Hamfactory.configuration.content_classes.each do |class_name| %>
+        <li>
+          <%= link_to class_name.tableize.titleize, entries_path(content_class: class_name.tableize) %>
+        </li>
+      <% end %>
+    </ul>
+  </nav>
+
+  <div class="content-wrapper">
+    <div class="wrapper wrapper-flash">
+      <%= render partial: "Hamfactory/shared/flash_messages", flash: flash %>
+    </div>
+
+    <%= yield %>
+  </div>
 </body>
 </html>
